Finalização perguntas frequentes da navbar

--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/perguntas-frequentes.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/perguntas-frequentes.html
@@ -37,17 +37,20 @@
 
     <main>
         <section>
-            <h1>Categorias de Livros</h1>
-            <h2>A BiblioSwap conta com um catálogo organizado para facilitar sua busca pelo próximo livro perfeito! Temos uma variedade de categorias para atender a todos os gostos e interesses literários:</h2>
+            <h1>Perguntas Frequentes</h1>
+            <h2>Se você tem dúvidas sobre a BiblioSwap, aqui estão algumas respostas para perguntas comuns:</h2>
             <ol type="1">
-                <li>Ficção – Romance, drama, aventura, fantasia, mistério e muito mais!</li>
-                <li>Não Ficção – Biografias, ensaios, livros de história e política.</li>
-                <li>Fantasia e Ficção Científica – Histórias épicas, distopias, mundos mágicos e realidades alternativas.</li>
-                <li>Romance – De clássicos a contemporâneos, para quem ama histórias de amor.</li>
-                <li>Autoajuda e Desenvolvimento Pessoal – Livros que inspiram e ajudam no crescimento pessoal.</li>
-                <li>Acadêmico e Técnico – Livros de estudo para estudantes e profissionais.</li>
-                <li>Infantil e Juvenil – Leitura para crianças e jovens, com títulos educativos e envolventes.</li>
+                <li>A troca de livros tem algum custo?</li>
             </ol>
+            <p>Não! A troca de livros na BiblioSwap é totalmente gratuita. Você só precisa negociar com o outro leitor os detalhes do envio ou da entrega do livro.</p>
+            <ol type="1" start="2">
+                <li>Como sei se um livro está em boas condições?</li>
+            </ol>
+            <p>Os usuários devem informar o estado de conservação de seus livros no momento do cadastro. Além disso, você pode conversar com o dono do livro antes da troca para garantir que ele está em boas condições.</p>
+            <ol type="1" start="3">
+                <li>Como posso confiar que vou receber o livro que solicitei?</li>
+            </ol>
+            <p>A Biblio Swap incentiva a troca segura, permitindo avaliações entre usuários. Sempre verifique a avaliação da pessoa antes de combinar uma troca.</p>
         </section>
     </main>
 </body>
