Finalização da tela  de solicitação de troca

--- a/conteúdo/Projeto Interdisciplinar/paginas/chat_batepapo/chat_batepapo.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/chat_batepapo/chat_batepapo.html
@@ -36,7 +36,7 @@
         </section>
 
         <section id="section2">
-            <div class="usuarios">
+            <div class="usuarios" id="pagina-exemplo-hover">
                 <img src="../../imagens_geral/img_cadastro_livros/chat-usuario.png" alt="">
                 <div class="texto-usuarios">
                     <h3>Usuário 1</h3>
