--- a/conteúdo/Projeto Interdisciplinar/paginas/solicitar_troca/solicitar_troca.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/solicitar_troca/solicitar_troca.html
@@ -43,6 +43,80 @@
                 <option>Todos</option>
             </select>
         </section>
+        <section id="section2">
+            <div id="container">
+                <div class="card-livros">
+                    <img src="../../imagens_geral/img_pagina_principal/livro-5.png" alt="Erro!">
+                    <h3>A Arte da Guerra</h3>
+                    <h4>Autor: Sun Tzu</h4>
+                    <h5>Estado: Conservado</h5>
+                    <button>Solicitar Troca</button>
+                </div>
+            </div>
+            <div id="container">
+                <div class="card-livros">
+                    <img src="../../imagens_geral/img_pagina_principal/livro-6.png" alt="Erro!" style="height: 370px;">
+                    <h3>100% PRESENTE</h3>
+                    <h4>Autor: Joel Moraes</h4>
+                    <h5>Estado: Conservado</h5>
+                    <button>Solicitar Troca</button>
+                </div>
+            </div>
+            <div id="container">
+                <div class="card-livros">
+                    <img src="../../imagens_geral/img_pagina_principal/livro-5.png" alt="Erro!">
+                    <h3>A Arte da Guerra</h3>
+                    <h4>Autor: Sun Tzu</h4>
+                    <h5>Estado: Conservado</h5>
+                    <button>Solicitar Troca</button>
+                </div>
+            </div>
+            <div id="container">
+                <div class="card-livros">
+                    <img src="../../imagens_geral/img_pagina_principal/livro-6.png" alt="Erro!" style="height: 370px;">
+                    <h3>100% PRESENTE</h3>
+                    <h4>Autor: Joel Moraes</h4>
+                    <h5>Estado: Conservado</h5>
+                    <button>Solicitar Troca</button>
+                </div>
+            </div>
+            <div id="container">
+                <div class="card-livros">
+                    <img src="../../imagens_geral/img_pagina_principal/livro-5.png" alt="Erro!">
+                    <h3>A Arte da Guerra</h3>
+                    <h4>Autor: Sun Tzu</h4>
+                    <h5>Estado: Conservado</h5>
+                    <button>Solicitar Troca</button>
+                </div>
+            </div>
+            <div id="container">
+                <div class="card-livros">
+                    <img src="../../imagens_geral/img_pagina_principal/livro-6.png" alt="Erro!" style="height: 370px;">
+                    <h3>100% PRESENTE</h3>
+                    <h4>Autor: Joel Moraes</h4>
+                    <h5>Estado: Conservado</h5>
+                    <button>Solicitar Troca</button>
+                </div>
+            </div>
+            <div id="container">
+                <div class="card-livros">
+                    <img src="../../imagens_geral/img_pagina_principal/livro-5.png" alt="Erro!">
+                    <h3>A Arte da Guerra</h3>
+                    <h4>Autor: Sun Tzu</h4>
+                    <h5>Estado: Conservado</h5>
+                    <button>Solicitar Troca</button>
+                </div>
+            </div>
+            <div id="container">
+                <div class="card-livros">
+                    <img src="../../imagens_geral/img_pagina_principal/livro-6.png" alt="Erro!" style="height: 370px;">
+                    <h3>100% PRESENTE</h3>
+                    <h4>Autor: Joel Moraes</h4>
+                    <h5>Estado: Conservado</h5>
+                    <button>Solicitar Troca</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
