pagina do perfil do usuario finalizado

--- a/conteúdo/Projeto Interdisciplinar/paginas/perfil_usuario/perfil_usuario.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/perfil_usuario/perfil_usuario.html
@@ -12,10 +12,21 @@
     <main>
         <section id="section1">
             <img src="../../imagens_geral/perfil_usuario/perfil-usuario.png" alt="Erro!" id="perfil-usuario">
-            <img src="../../imagens_geral/perfil_usuario/tres-pontos.png" alt="Erro!" id="tres-pontos">
         </section>
         <section id="section2">
-            h
+            <h1>Username</h1>
+            <h1 style="color: var(--azul-400)">★★★★⯪</h1>
+            <h3>20 Livros Disponiveis para Troca</h3>
+            <h3>50 Livros Trocados</h3>
+        </section>
+        <hr>
+        <section id="section3">
+            <h1>Livros Disponíveis</h1>
+            <div>
+                <img src="../../imagens_geral/perfil_usuario/livro-1.png" alt="Erro!">
+                <img src="../../imagens_geral/perfil_usuario/livro-2.png" alt="Erro!">
+                <img src="../../imagens_geral/perfil_usuario/livro-3.png" alt="Erro!">
+            </div>
         </section>
     </main>
 </body>
