finalizando os ajustes da tela principal

--- a/conteúdo/Projeto Interdisciplinar/index.html
+++ b/conteúdo/Projeto Interdisciplinar/index.html
@@ -38,6 +38,7 @@
     <main>
         <section>
             <h2>Livros Mais Procurados:</h2>
+            <h3>Ver mais livros:</h3>
             <div class="livros">
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
@@ -56,11 +57,12 @@
                     <button>Trocar Livro</button>
                 </div>
                 <div>
-                    <img src="imagens_geral/img_pagina_principal/livro-4.png" alt="Erro!">
+                    <img src="imagens_geral/img_pagina_principal/livro-7.png" alt="Erro!">
                     <button>Trocar Livro</button>
                 </div>
             </div>
             <h2>Livros Mais Procurados:</h2>
+            <h3>Ver mais livros:</h3>
             <div class="livros">
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
@@ -79,7 +81,7 @@
                     <button>Trocar Livro</button>
                 </div>
                 <div>
-                    <img src="imagens_geral/img_pagina_principal/livro-4.png" alt="Erro!">
+                    <img src="imagens_geral/img_pagina_principal/livro-7.png" alt="Erro!">
                     <button>Trocar Livro</button>
                 </div>
             </div>
