--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_especificaçõesl_ivros/a_arte.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_especificaçõesl_ivros/a_arte.html
@@ -25,7 +25,37 @@
 
     <main>
         <section id="section1">
-            
+            <h1>SOLICITAÇÃO DE TROCA</h1>
+            <h2>Informações do livro</h2>
+            <h3 style="color: var(--azul-400);">A arte da guerra: por Sun Tzu (Autor) Pedro Manoel Soares (Tradutor)</h3>
+            <hr>
+            <h3 style="height: 40px;">Avaliação: <span style="color: var(--azul-400);">★★★★⯪</span></h3>
+            <h2>De que quem é o livro?</h2>
+            <h3 style="height: 30px;">Dona do livro: <span style="color: var(--azul-400);">luiza.suassuna@gmail.com</span></h3>
+            <h3 style="height: 40px;">Reputação no Biblio Swap: <span style="color: var(--azul-400);">★★★★★</span></h3>
+            <h2>Endereço de envio</h2>
+            <form>
+                <div id="largura-form-gap">
+                    <input type="text" placeholder="Estado*">
+                    <input type="text" placeholder="Cidade*">
+                    <div class="div-input">
+                        <input type="text" class="tres-input" placeholder="Bairro*">
+                        <input type="text" class="tres-input" placeholder="Rua*">
+                        <input type="text" class="tres-input" placeholder="Número*">
+                    </div>
+                    <div class="div-input">
+                        <input type="text" placeholder="País*" class="dois-input">
+                        <input type="text" placeholder="CEP*" class="dois-input">
+                    </div>
+                    <button>Enviar</button>
+                </div>
+            </form>
+        </section>
+
+        <section id="section2">
+            <div>
+                <img src="../../imagens_geral/img_pagina_principal/livro-5-maior.png" alt="Erro!">
+            </div>
         </section>
     </main>
 </body>
