Arrumando os livros disponiveis

--- a/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
@@ -44,22 +44,22 @@
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
-                    <h3>A Arte da Guerra</h3>
-                    <h4>Autor: Sun Tzu</h4>
+                    <h3>100% Presente</h3>
+                    <h4>Autor: Joel Moraes</h4>
                     <h5>Estado: Conservado</h5>
                     <button>Trocar livro</button>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-2.png" alt="Erro!">
-                    <h3>A Arte da Guerra</h3>
-                    <h4>Autor: Sun Tzu</h4>
+                    <h3>Café Com Deus Pai</h3>
+                    <h4>Autor: Junior  Rostirola</h4>
                     <h5>Estado: Conservado</h5>
                     <button>Trocar livro</button>
                 </div>
                 <div class="card-livros">
-                    <img src="../../imagens_geral/img_pagina_principal/livro-3.png" alt="Erro!">
-                    <h3>A Arte da Guerra</h3>
-                    <h4>Autor: Sun Tzu</h4>
+                    <img src="../../imagens_geral/img_pagina_principal/livro-7.png" alt="Erro!">
+                    <h3>Código-Fonte/></h3>
+                    <h4>Autor: Bill Gates</h4>
                     <h5>Estado: Conservado</h5>
                     <button>Trocar livro</button>
                 </div>
@@ -72,22 +72,22 @@
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
-                    <h3>A Arte da Guerra</h3>
-                    <h4>Autor: Sun Tzu</h4>
+                    <h3>100% Presente</h3>
+                    <h4>Autor: Joel Moraes</h4>
                     <h5>Estado: Conservado</h5>
                     <button>Trocar livro</button>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-2.png" alt="Erro!">
-                    <h3>A Arte da Guerra</h3>
-                    <h4>Autor: Sun Tzu</h4>
+                    <h3>Café Com Deus Pai</h3>
+                    <h4>Autor: Junior  Rostirola</h4>
                     <h5>Estado: Conservado</h5>
                     <button>Trocar livro</button>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-3.png" alt="Erro!">
-                    <h3>A Arte da Guerra</h3>
-                    <h4>Autor: Sun Tzu</h4>
+                    <h3>Pijama Listrado</h3>
+                    <h4>Autor: John Boyne</h4>
                     <h5>Estado: Conservado</h5>
                     <button>Trocar livro</button>
                 </div>
