--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_especificaçõesl_ivros/esteja_viva.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_especificaçõesl_ivros/esteja_viva.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblio Swap</title>
-    <link rel="stylesheet" href="esteja_vivo.css">
+    <link rel="stylesheet" href="esteja_viva.css">
     <link rel="stylesheet" href="../../style_geral.css">
     <link rel="shortcut icon" href="../../imagens_geral/img_principais/favicon.ico" type="image/x-icon">
 </head>
