Arrumando botao da tela de cadastro

--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.html
@@ -48,7 +48,7 @@
                         <input type="checkbox" id="input-marcar" name="senha">
                         <label id="label-senha">Lembrar minha senha</label> 
                     </div>
-                    <button id="botao-form">Entrar</button>
+                    <button id="botao-form">Cadastrar</button>
                 </form>
             </div>
         </section>
