Adicionando um link na logo, para quando clicar ele redirecionar para a pagina inicial

--- a/conteúdo/Projeto Interdisciplinar/index.html
+++ b/conteúdo/Projeto Interdisciplinar/index.html
@@ -10,13 +10,16 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <a href="index.html" style="text-decoration: none;">
+            <div class="logo">
             <img src="imagens_geral/img_principais/logo.png" id="logo">
-            <div>
-                <h1>Biblio</h1>
-                <h1>Swap</h1>
+                <div>
+                    <h1>Biblio</h1>
+                    <h1>Swap</h1>
+                </div>
             </div>
-        </div>
+        </a>
+        
         <div class="barra-de-pesquisa">
             <input type="text" placeholder="Procure por livros, usuários, autores e comece a troca!">
             <img src="imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
