Adicionando icone de perfil nas paginas

--- a/conteúdo/Projeto Interdisciplinar/index.html
+++ b/conteúdo/Projeto Interdisciplinar/index.html
@@ -29,10 +29,10 @@
             <button>Entrar</button>
         </div>
         <nav>
-            <p>Ínicio</p>
+            <p style="text-decoration: underline;">Ínicio</p>
             <p>Sobre Nós</p>
             <p>Como Funciona</p>
-            <p>Categorias de Livros</p>
+            <p>Cadastrar Livro</p>
             <p>Perguntas frequentes (FAQ)</p>
             <p>Ajuda</p>
         </nav>
