--- a/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
@@ -23,11 +23,12 @@
             <input type="text" placeholder="Procure por livros, usuários, autores e comece a troca!">
             <img src="../../imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
         </div>
+        <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil">
         <nav>
             <p>Ínicio</p>
             <p>Sobre Nós</p>
             <p>Como Funciona</p>
-            <p>Categorias de Livros</p>
+            <p>Cadastrar Livro</p>
             <p>Perguntas frequentes (FAQ)</p>
             <p>Ajuda</p>
         </nav>
