--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/deus_pai.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/deus_pai.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblio Swap</title>
-    <link rel="stylesheet" href="todos_garotos.css">
+    <link rel="stylesheet" href="deus_pai.css">
     <link rel="stylesheet" href="../../style_geral.css">
     <link rel="shortcut icon" href="../../imagens_geral/img_principais/favicon.ico" type="image/x-icon">
 </head>
@@ -23,6 +23,7 @@
             <input type="text" placeholder="Procure por livros, usuários, autores e comece a troca!">
             <img src="../../imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
         </div>
+        <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil">
     </header>
 
     <main>
