--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro_livros/cadastro_livros.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro_livros/cadastro_livros.html
@@ -22,7 +22,17 @@
         <div class="barra-de-pesquisa">
             <input type="text" placeholder="Procure por livros, usuários, autores e comece a troca!">
             <img src="../../imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
+            
         </div>
+        <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil">
+        <nav>
+            <p>Ínicio</p>
+            <p>Sobre Nós</p>
+            <p>Como Funciona</p>
+            <p style="text-decoration: underline;">Cadastrar Livro</p>
+            <p>Perguntas frequentes (FAQ)</p>
+            <p>Ajuda</p>
+        </nav>
     </header>
 
     <main>
