--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/ajuda.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/ajuda.html
@@ -31,7 +31,7 @@
             <p>Ínicio</p>
             <p>Sobre Nós</p>
             <p>Como Funciona</p>
-            <p>Categorias de Livros</p>
+            <p>Cadastrar Livro</p>
             <p>Perguntas frequentes (FAQ)</p>
             <p style="text-decoration: underline;">Ajuda</p>
         </nav>
