--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/pijama_listrado.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/pijama_listrado.html
@@ -23,6 +23,7 @@
             <input type="text" placeholder="Procure por livros, usuários, autores e comece a troca!">
             <img src="../../imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
         </div>
+        <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil">
     </header>
 
     <main>
