--- a/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="../../index.html" style="text-decoration: none;">
+        <a href="../pagina_inicial/index_cadastrado.html" style="text-decoration: none;">
             <div class="logo">
             <img src="../../imagens_geral/img_principais/logo.png" id="logo">
                 <div>
