--- a/conteúdo/Projeto Interdisciplinar/paginas/perfil_usuario/perfil_usuario.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/perfil_usuario/perfil_usuario.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <section id="section1">
+            <a href="../"></a><img src="../../imagens_geral/perfil_usuario/voltar.png" alt="Erro!" id="voltar">
             <img src="../../imagens_geral/perfil_usuario/perfil-usuario.png" alt="Erro!" id="perfil-usuario">
         </section>
         <section id="section2">
