--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/a_arte.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/a_arte.html
@@ -23,7 +23,9 @@
             <input type="text" placeholder="Procure por livros, usuários, autores e comece a troca!">
             <img src="../../imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
         </div>
-        <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil">
+        <a href="../perfil_usuario/perfil_usuario.html">
+            <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil-usuario">
+        </a>
     </header>
 
     <main>
