adicionando links na navbar

--- a/conteúdo/Projeto Interdisciplinar/index.html
+++ b/conteúdo/Projeto Interdisciplinar/index.html
@@ -25,16 +25,16 @@
             <img src="imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
         </div>
         <div class="botoes">
-            <button>Cadastrar</button>
-            <button>Entrar</button>
+            <a href="paginas/cadastro/cadastro.html"><button>Cadastrar</button></a>
+            <a href="paginas/fazer_login/fazer_login.html"><button>Entrar</button></a>
         </div>
         <nav>
-            <p style="text-decoration: underline;">Ínicio</p>
-            <p>Sobre Nós</p>
-            <p>Como Funciona</p>
-            <p>Cadastrar Livro</p>
-            <p>Perguntas frequentes (FAQ)</p>
-            <p>Ajuda</p>
+            <a href="index.html" style="text-decoration: none;"><p style="text-decoration: underline;">Ínicio</p></a>
+            <a href="paginas/variações_navbar/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
+            <a href="paginas/variações_navbar/como-funciona.html" style="text-decoration: none;"><p>Como Funciona</p></a>
+            <a href="paginas/cadastro/cadastro.html" style="text-decoration: none;"><p>Cadastrar Livro</p></a>
+            <a href="paginas/variações_navbar/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
+            <a href="paginas/variações_navbar/ajuda.html" style="text-decoration: none;"><p>Ajuda</p></a>
         </nav>
     </header>
 
