--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/ajuda.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar/ajuda.html
@@ -24,16 +24,16 @@
             <img src="../../imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
         </div>
         <div class="botoes">
-            <button>Cadastrar</button>
-            <button>Entrar</button>
+            <a href="../cadastro/cadastro.html"><button>Cadastrar</button></a>
+            <a href="../fazer_login/fazer_login.html"><button>Entrar</button></a>
         </div>
         <nav>
-            <p>Ínicio</p>
-            <p>Sobre Nós</p>
-            <p>Como Funciona</p>
-            <p>Cadastrar Livro</p>
-            <p>Perguntas frequentes (FAQ)</p>
-            <p style="text-decoration: underline;">Ajuda</p>
+            <a href="../../index.html" style="text-decoration: none;"><p>Ínicio</p></a>
+            <a href="../variações_navbar/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
+            <a href="../variações_navbar/como-funciona.html" style="text-decoration: none;"><p>Como Funciona</p></a>
+            <a href="../cadastro/cadastro.html" style="text-decoration: none;"><p>Cadastrar Livro</p></a>
+            <a href="../variações_navbar/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
+            <a href="../variações_navbar/ajuda.html" style="text-decoration: none;"><p style="text-decoration: underline;">Ajuda</p></a>
         </nav>
     </header>
 
