--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar_cadastrado/como-funciona.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_navbar_cadastrado/como-funciona.html
@@ -27,12 +27,12 @@
             <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil-usuario">
         </a>
         <nav>
-            <p>Ínicio</p>
-            <p>Sobre Nós</p>
-            <p style="text-decoration: underline;">Como Funciona</p>
-            <p>Cadastrar Livro</p>
-            <p>Perguntas frequentes (FAQ)</p>
-            <p>Ajuda</p>
+            <a href="../../paginas/pagina_inicial/index_cadastrado.html" style="text-decoration: none;"><p>Ínicio</p></a>
+            <a href="../variações_navbar_cadastrado/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
+            <a href="../variações_navbar_cadastrado/como-funciona.html" style="text-decoration: none;"><p style="text-decoration: underline;">Como Funciona</p></a>
+            <a href="../../paginas/cadastro_livros/cadastro_livros.html" style="text-decoration: none;"><p>Cadastrar Livro</p></a>
+            <a href="../variações_navbar_cadastrado/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
+            <a href="../variações_navbar_cadastrado/ajuda.html" style="text-decoration: none;"><p>Ajuda</p></a>
         </nav>
     </header>
 
