--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.html
@@ -26,8 +26,8 @@
             <img src="../../imagens_geral/img_pagina_login-cadastro/buscar.png" alt="Erro!">
         </div>
         <div class="botoes">
-            <button>Cadastrar</button>
-            <button>Entrar</button>
+            <a href="../cadastro/cadastro.html"><button>Cadastrar</button></a>
+            <a href="../fazer_login/fazer_login.html"><button>Entrar</button></a>
         </div>
     </header>
     <main>
