--- a/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
@@ -27,12 +27,12 @@
             <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil-usuario">
         </a>
         <nav>
-            <p>Ínicio</p>
-            <p>Sobre Nós</p>
-            <p>Como Funciona</p>
-            <p>Cadastrar Livro</p>
-            <p>Perguntas frequentes (FAQ)</p>
-            <p>Ajuda</p>
+            <a href="../../index.html" style="text-decoration: none;"><p>Ínicio</p></a>
+            <a href="../variações_navbar/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
+            <a href="../variações_navbar/como-funciona.html" style="text-decoration: none;"><p>Como Funciona</p></a>
+            <a href="../cadastro_livros/cadastro_livros.html" style="text-decoration: none;"><p>Cadastrar Livro</p></a>
+            <a href="../variações_navbar/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
+            <a href="../variações_navbar/ajuda.html" style="text-decoration: none;"><p>Ajuda</p></a>
         </nav>
     </header>
 
