adicionando link no botao de trocar livro e ver mais.

--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro/cadastro.html
@@ -33,7 +33,7 @@
     <main>
         <section>
             <div id="login">
-                <form action="">
+                <form action="../pagina_inicial/index_cadastrado.html">
                     <h1>Cadastrar</h1>
                     <div id="preenchimento-input">
                         <div class="email">
