--- a/conteúdo/Projeto Interdisciplinar/paginas/cadastro_livros/cadastro_livros.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/cadastro_livros/cadastro_livros.html
@@ -41,8 +41,7 @@
         <section>
             <h1>Cadastro de Livros</h1>
             <h2>Dados de Login</h2>
-            <form>
-                
+            <form action="../pagina_inicial/index_cadastrado.html">
                 <div class="formulario_login">
                     <div id="largura-form">
                         <h3>E-mail*</h3>
@@ -73,7 +72,7 @@
                 </div>
             </form>
 
-            <form>
+            <form action="../pagina_inicial/index_cadastrado.html">
                 <div class="formulario_login">
                     <div id="largura-form">
                         <h3>Confirme seu E-mail*</h3>
@@ -96,7 +95,9 @@
                     </div>
                 </div>
             </form>
-            <button>Cadastrar</button>
+            <form action="../pagina_inicial/index_cadastrado.html" id="apenas-para-botao">
+                <button>Cadastrar</button>
+            </form>
         </section>
     </main>
 </body>
