--- a/conteúdo/Projeto Interdisciplinar/paginas/fazer_login/fazer_login.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/fazer_login/fazer_login.html
@@ -33,7 +33,7 @@
     <main>
         <section>
             <div id="login">
-                <form action="">
+                <form action="../pagina_inicial/index_cadastrado.html">
                     <h1>Fazer Login</h1>
                     <div id="preenchimento-input">
                         <div class="email">
@@ -51,7 +51,7 @@
                         <label id="label-senha">Lembrar minha senha</label>
                     </div>
                     <button id="botao-form">Entrar</button>
-                    <p style="text-decoration: underline;" id="p-final">Ainda não tenho uma conta</p>
+                    <a href="../cadastro/cadastro.html" style="text-decoration: none;"><p style="text-decoration: underline;" id="p-final">Ainda não tenho uma conta</p></a>
                 </form>
             </div>
         </section>
