--- a/conteúdo/Projeto Interdisciplinar/paginas/pagina_inicial/index_cadastrado.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/pagina_inicial/index_cadastrado.html
@@ -28,63 +28,63 @@
             <img src="../../imagens_geral/img_principais/perfil-usuario.png" alt="Erro!" id="img-perfil-usuario">
         </a>
         <nav>
-            <p style="text-decoration: underline;">Ínicio</p>
-            <p>Sobre Nós</p>
-            <p>Como Funciona</p>
-            <p>Cadastrar Livro</p>
-            <p>Perguntas frequentes (FAQ)</p>
-            <p>Ajuda</p>
+            <a href="index_cadastrado.html" style="text-decoration: none;"><p style="text-decoration: underline;">Ínicio</p></a>
+            <a href="../variações_navbar_cadastrado/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
+            <a href="../variações_navbar_cadastrado/como-funciona.html" style="text-decoration: none;"><p>Como Funciona</p></a>
+            <a href="../../paginas/cadastro_livros/cadastro_livros.html" style="text-decoration: none;"><p>Cadastrar Livro</p></a>
+            <a href="../variações_navbar_cadastrado/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
+            <a href="../variações_navbar_cadastrado/ajuda.html" style="text-decoration: none;"><p>Ajuda</p></a>
         </nav>
     </header>
 
     <main>
         <section>
             <h2>Livros Mais Procurados:</h2>
-            <h3>Ver mais livros:</h3>
+            <a href="../livros_disponiveis/livros_disponiveis.html"><h3>Ver mais livros:</h3></a>
             <div class="livros">
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/esteja_viva.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-2.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/deus_pai.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-3.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/pijama_listrado.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-4.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/todos_garotos.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-7.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/codigo_fonte.html" id="button"><button>Trocar Livro</button></a>
                 </div>
             </div>
             <h2>Livros Mais Procurados:</h2>
-            <h3>Ver mais livros:</h3>
+            <a href="../livros_disponiveis/livros_disponiveis.html"><h3>Ver mais livros:</h3></a>
             <div class="livros">
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/esteja_viva.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-2.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/deus_pai.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-3.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/pijama_listrado.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-4.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/todos_garotos.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="../../imagens_geral/img_pagina_principal/livro-7.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="../variações_solicitações_de_troca/codigo_fonte.html" id="button"><button>Trocar Livro</button></a>
                 </div>
             </div>
         </section>
