--- a/conteúdo/Projeto Interdisciplinar/paginas/perfil_usuario/perfil_usuario.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/perfil_usuario/perfil_usuario.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="section1">
-            <a href="../"></a><img src="../../imagens_geral/perfil_usuario/voltar.png" alt="Erro!" id="voltar">
+            <a href="../pagina_inicial/index_cadastrado.html" style="height: 80px;" id="voltar"><img src="../../imagens_geral/perfil_usuario/voltar.png" alt=""></a>
             <img src="../../imagens_geral/perfil_usuario/perfil-usuario.png" alt="Erro!" id="perfil-usuario">
         </section>
         <section id="section2">
