--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/pijama_listrado.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/pijama_listrado.html
@@ -35,7 +35,7 @@
             <h3 style="color: var(--azul-400); width: 450px;">O menino do pijama listrado John Boyne (Autor)</h3>
             <hr>
             <h3 style="height: 40px;">Avaliação: <span style="color: var(--azul-400);">★★★★⯪</span></h3>
-            <h2>De que quem é o livro?</h2>
+            <h2>De quem é o livro?</h2>
             <h3 style="height: 30px; width: 600px;">Dona do livro: <span style="color: var(--azul-400);">luiza.suassuna@gmail.com</span></h3>
             <h3 style="height: 40px;">Reputação no Biblio Swap: <span style="color: var(--azul-400);">★★★★★</span></h3>
             <h2>Endereço de envio</h2>
