--- a/conteúdo/Projeto Interdisciplinar/index.html
+++ b/conteúdo/Projeto Interdisciplinar/index.html
@@ -41,51 +41,51 @@
     <main>
         <section>
             <h2>Livros Mais Procurados:</h2>
-            <h3>Ver mais livros:</h3>
+            <a href="paginas/fazer_login/fazer_login.html"><h3>Ver mais livros:</h3></a>
             <div class="livros">
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-2.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-3.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-4.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-7.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
             </div>
             <h2>Livros Mais Procurados:</h2>
-            <h3>Ver mais livros:</h3>
+            <a href="paginas/fazer_login/fazer_login.html"><h3>Ver mais livros:</h3></a>
             <div class="livros">
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-2.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-3.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-4.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-7.png" alt="Erro!">
-                    <button>Trocar Livro</button>
+                    <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
             </div>
         </section>
