--- a/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/livros_disponiveis/livros_disponiveis.html
@@ -28,11 +28,11 @@
         </a>
         <nav>
             <a href="../../index.html" style="text-decoration: none;"><p>Ínicio</p></a>
-            <a href="../variações_navbar/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
-            <a href="../variações_navbar/como-funciona.html" style="text-decoration: none;"><p>Como Funciona</p></a>
+            <a href="../variações_navbar_cadastrado/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
+            <a href="../variações_navbar_cadastrado/como-funciona.html" style="text-decoration: none;"><p>Como Funciona</p></a>
             <a href="../cadastro_livros/cadastro_livros.html" style="text-decoration: none;"><p>Cadastrar Livro</p></a>
-            <a href="../variações_navbar/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
-            <a href="../variações_navbar/ajuda.html" style="text-decoration: none;"><p>Ajuda</p></a>
+            <a href="../variações_navbar_cadastrado/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
+            <a href="../variações_navbar_cadastrado/ajuda.html" style="text-decoration: none;"><p>Ajuda</p></a>
         </nav>
     </header>
 
@@ -45,56 +45,56 @@
                     <h3>A Arte da Guerra</h3>
                     <h4>Autor: Sun Tzu</h4>
                     <h5>Estado: Conservado</h5>
-                    <button>Trocar livro</button>
+                    <a href="../variações_solicitações_de_troca/a_arte.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
                     <h3>100% Presente</h3>
                     <h4>Autor: Joel Moraes</h4>
                     <h5>Estado: Conservado</h5>
-                    <button>Trocar livro</button>
+                    <a href="../variações_solicitações_de_troca/esteja_viva.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-2.png" alt="Erro!">
                     <h3>Café Com Deus Pai</h3>
                     <h4>Autor: Junior  Rostirola</h4>
                     <h5>Estado: Conservado</h5>
-                    <button>Trocar livro</button>
+                    <a href="../variações_solicitações_de_troca/deus_pai.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-7.png" alt="Erro!">
                     <h3>Código-Fonte/></h3>
                     <h4>Autor: Bill Gates</h4>
                     <h5>Estado: Conservado</h5>
-                    <button>Trocar livro</button>
+                    <a href="../variações_solicitações_de_troca/codigo_fonte.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-5.png" alt="Erro!">
                     <h3>A Arte da Guerra</h3>
                     <h4>Autor: Sun Tzu</h4>
                     <h5>Estado: Conservado</h5>
-                    <button>Trocar livro</button>
+                    <a href="../variações_solicitações_de_troca/a_arte.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
                     <h3>100% Presente</h3>
                     <h4>Autor: Joel Moraes</h4>
                     <h5>Estado: Conservado</h5>
-                    <button>Trocar livro</button>
+                    <a href="../variações_solicitações_de_troca/esteja_viva.html" id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-2.png" alt="Erro!">
                     <h3>Café Com Deus Pai</h3>
                     <h4>Autor: Junior  Rostirola</h4>
                     <h5>Estado: Conservado</h5>
-                    <button>Trocar livro</button>
+                    <a href="../variações_solicitações_de_troca/deus_pai.html   " id="button"><button>Trocar Livro</button></a>
                 </div>
                 <div class="card-livros">
                     <img src="../../imagens_geral/img_pagina_principal/livro-3.png" alt="Erro!">
                     <h3>Pijama Listrado</h3>
                     <h4>Autor: John Boyne</h4>
                     <h5>Estado: Conservado</h5>
-                    <button>Trocar livro</button>
+                    <a href="../variações_solicitações_de_troca/pijama_listrado.html" id="button"><button>Trocar Livro</button></a>
                 </div>
             </div>
 
