--- a/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/pijama_listrado.html
+++ b/conteúdo/Projeto Interdisciplinar/paginas/variações_solicitações_de_troca/pijama_listrado.html
@@ -36,10 +36,10 @@
             <hr>
             <h3 style="height: 40px;">Avaliação: <span style="color: var(--azul-400);">★★★★⯪</span></h3>
             <h2>De quem é o livro?</h2>
-            <h3 style="height: 30px; width: 600px;">Dona do livro: <span style="color: var(--azul-400);">luiza.suassuna@gmail.com</span></h3>
+            <a href="../chat_batepapo/chat_batepapo.html" style="text-decoration: none;"><h3 style="height: 30px;">Dona do livro: <span style="color: var(--azul-400);">luiza.suassuna@gmail.com</span></h3></a>
             <h3 style="height: 40px;">Reputação no Biblio Swap: <span style="color: var(--azul-400);">★★★★★</span></h3>
             <h2>Endereço de envio</h2>
-            <form>
+            <form action="../pagina_inicial/index_cadastrado.html">
                 <div id="largura-form-gap">
                     <input type="text" placeholder="Estado*">
                     <input type="text" placeholder="Cidade*">
