--- a/conteúdo/Projeto Interdisciplinar/index.html
+++ b/conteúdo/Projeto Interdisciplinar/index.html
@@ -28,20 +28,22 @@
             <a href="paginas/cadastro/cadastro.html"><button>Cadastrar</button></a>
             <a href="paginas/fazer_login/fazer_login.html"><button>Entrar</button></a>
         </div>
-        <nav>
-            <a href="index.html" style="text-decoration: none;"><p style="text-decoration: underline;">Ínicio</p></a>
-            <a href="paginas/variações_navbar/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
-            <a href="paginas/variações_navbar/como-funciona.html" style="text-decoration: none;"><p>Como Funciona</p></a>
-            <a href="paginas/cadastro/cadastro.html" style="text-decoration: none;"><p>Cadastrar Livro</p></a>
-            <a href="paginas/variações_navbar/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
-            <a href="paginas/variações_navbar/ajuda.html" style="text-decoration: none;"><p>Ajuda</p></a>
-        </nav>
     </header>
+    <nav>
+        <a href="index.html" style="text-decoration: none;"><p style="text-decoration: underline;">Ínicio</p></a>
+        <a href="paginas/variações_navbar/sobre-nos.html" style="text-decoration: none;"><p>Sobre Nós</p></a>
+        <a href="paginas/variações_navbar/como-funciona.html" style="text-decoration: none;"><p>Como Funciona</p></a>
+        <a href="paginas/cadastro/cadastro.html" style="text-decoration: none;"><p>Cadastrar Livro</p></a>
+        <a href="paginas/variações_navbar/perguntas-frequentes.html" style="text-decoration: none;"><p>Perguntas frequentes (FAQ)</p></a>
+        <a href="paginas/variações_navbar/ajuda.html" style="text-decoration: none;"><p>Ajuda</p></a>
+    </nav>
 
     <main>
         <section>
-            <h2>Livros Mais Procurados:</h2>
-            <a href="paginas/fazer_login/fazer_login.html"><h3>Ver mais livros:</h3></a>
+            <div id="link-ver-mais">
+                <h2>Livros Mais Procurados:</h2>
+                <a href="paginas/fazer_login/fazer_login.html" style="width: 240px; height: 42px;"><h3>Ver mais livros:</h3></a>
+            </div>
             <div class="livros">
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
@@ -64,8 +66,10 @@
                     <a href="paginas/fazer_login/fazer_login.html" id="button"><button>Trocar Livro</button></a>
                 </div>
             </div>
-            <h2>Livros Mais Procurados:</h2>
-            <a href="paginas/fazer_login/fazer_login.html"><h3>Ver mais livros:</h3></a>
+            <div id="link-ver-mais">
+                <h2>Livros Mais Trocados:</h2>
+                <a href="paginas/fazer_login/fazer_login.html" style="width: 240px; height: 42px;"><h3>Ver mais livros:</h3></a>
+            </div>
             <div class="livros">
                 <div>
                     <img src="imagens_geral/img_pagina_principal/livro-1.png" alt="Erro!">
